<resources>
    <string name="app_name">KeepingUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">dantelenarduzzi01@stclairconnect.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_whatsHot">Whats Hot</string>
    <string name="menu_releaseDate">Release Date</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_topViewed">Top Viewed</string>
    <string name="menu_credits">Credits</string>

    <!-- titles -->
    <string name="KeepingUp">KeepingUp</string>
    <string name="whatshotTitle">Whats Hot?</string>
    <string name="whatshotTwitch">Top games on twitch</string>
    <string name="whatshotSteam">Top played Steam Charts</string>
    <string name="emailus">Community vote</string>
    <string name="gameOfWeek">CyberPunk 2077</string>
    <string name="map">Our Location</string>
    <string name="phone">Call us!</string>


    <!-- content -->
    <string name="Releases">
        Cyberpunk 2077 [PC, PS4, XBO, Stadia] – December 10th, 2020 \n
        Hitman 3 [PC, PS5, XSX, PS4, XBO, Stadia] – January 20, 2021\n
        Everspace 2 [PC] – January TBC, 2021 \n
        The Pedestrian [PS4] – January TBC, 2021 \n
        Outriders [PC, PS5, XSX, PS4, XBO] – February 2, 2021 \n
        The Nioh Collection [PS5] – February 5, 2021 \n
        Ampersat [PC] – February 6, 2021 \n
        Little Nightmares 2 [PC, PS4, XBO, Switch] – February 11, 2021 \n
        Destruction AllStars [PS5] – February TBC, 2021 \n
        Hiros Escape [PC] – February TBC, 2021 \n
        Rogue Invader [PC] – February TBC, 2021 \n
        Harvest Moon: One World [Switch] – March 2, 2021 \n
        Yakuza: Like a Dragon [PS5] – March 2, 2021 \n
        Balan Wonderworld [PC, Switch] – March 26, 2021 \n
        Monster Hunter Rise [Switch] – March 26, 2021 \n
        Fearmonium [PC] – March TBC, 2021 \n
       </string>
    <string name="whatsHotContent">
        Lets take a dive into some analytics and look at what games are \n
        topping the charts at the moment. If you are in a draught and arent sure what \n
        to play next go ahead and give these games a try.
    </string>
    <string name="whatsHotCommunity">The communities game of the week award goes to…</string>
    <string name="whatsHotEmail">What game have you been diving into lately? Send us an email and let us know for a chance for your game to be featured!</string>


    <string name="creditsText">Launcher Icon: From Flickr \n Link:  https://www.flickr.com/photos/30478819@N08/50287793628/in/photostream/
icon \n whats hot picture:From Pixabay \n Link:  https://pixabay.com/illustrations/game-gaming-gaming-console-gamer-1926906/  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>