<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_whatsHot"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:title="@string/menu_whatsHot" />
        <item
            android:id="@+id/nav_topViewed"
            android:icon="@drawable/ic_baseline_games_24"
            android:title="@string/menu_topViewed" />
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_baseline_priority_high_24"
            android:title="@string/menu_featured" />
        <item
            android:id="@+id/nav_releaseDate"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="@string/menu_releaseDate" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_credits" />
    </group>
</menu>