<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".whatsHot">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:fontFamily="casual"
        android:gravity="center|top"
        android:text="@string/whatshotTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="358dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="63dp"
        android:fontFamily="casual"
        android:gravity="start"
        android:text="@string/whatsHotContent"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/steamButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="256dp"
        android:text="@string/whatshotSteam" />

    <Button
        android:id="@+id/twitchButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="256dp"
        android:text="@string/whatshotTwitch" />

</RelativeLayout>